Integrate Layout and AccountList components into App; update styles to include new component styles and prevent body overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,12 @@
+@import './styles/Layout.scss';
+@import './styles/AccountList.scss';
+
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 code {
